terraform/main.tf
provider "aws"{
    region = var.region
}

data "aws_ami" "amazone_linux" {
    most_recent = true
    owners = ["amazon"]

    filter {
        name = "name"
        values = ["amzn2-ami-hvm-*-x86_64-gp2"]
    }
}

resource "aws_launch_template" "web" {
    name_prefix = "${var.project_name}-lt-"
    image_id = data.aws_ami.amazone_linux
    instance_type = var.instance_type

    iam_instance_profile {
        name = aws_iam_instance_profile.ec2_profile.name
    }

    vpc_security_group_ids = [aws_security_group.ec2.id]

    user_data = base64decode(templatefile("user-data.sh" ,{
        db_host = aws_db_instance.mysql.address
        db_name = var.db_name
        db_name = var.db_username
        db_password = var.db_password
        aws_region = var.region
        s3_bucket = var.s3_bucket_name
    }))
    lifecycle {
        create_before_destroy = true
    }

    tags = {
        Name = "${var.project_name}-launch-template"
    }
}

resource "aws_autoscaling_group" "web" {
    name = "${var.project_name}-asg"

    vpc_zone_identifier = [
        aws_subnet.public_1.id,
        aws_subnet.public_2.id
    ]

    max_size = var.asg_max_size
    min_size = var.asg_min_size
    desired_capacity = var.asg_desired_capacity

    launch_template {
        id = aws_launch_template.web.id
        version = "$Latest"
    }

    health_check_type = "ELB"
    health_check_grace_period = 300

    target_group_arns = [aws_lb_target_group.web.arn]

    lifecycle {
        ignore_changes = [ desired_capacity, target_group_arns ]
    }

    tag {
        key = "Name"
        value = "${var.project_name}-ec2"
        propagate_at_launch = true
    }

    tag{
        key = "Project"
        value = var.project_name
        propagate_at_launch = true
    }
}

resource "aws_autoscaling_policy" "scale_up" {
    name = "${var.project_name}-scale-up"
    autoscaling_group_name = aws.autoscaling_group.web.name
    adjustment_type = "ChangeInCapacity"
    scaling_adjustment = 1
    cooldown = 120
}

resource "aws_autoscaling_policy" "scale_down" {
    name = "${var.project_name}-scale-down"
    autoscaling_group_name = aws.aws_autoscaling_group.web.name
    adjustment_type = -1
    cooldown = 120
}
